src/test/06-Errors/error-overload-class.txt
error-overload-class.ck:9:5: error: cannot overload function with identical arguments...
[9]     fun void bar()
        ^
    |- 'void Foo.bar()' already defined elsewhere
